--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ set(SOURCE_FILES
         chapter_04.cpp
         chapter_05.cpp
         chapter_06.cpp
-        chapter_07.cpp)
+        chapter_07.cpp
+        chapter_09.cpp)
 
 add_executable(cpp_tmp_book_exercise ${SOURCE_FILES})
 
