--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ set(SOURCE_FILES
         chapter_05.cpp
         chapter_06.cpp
         chapter_07.cpp
-        chapter_09.cpp)
+        chapter_09.cpp
+        chapter_10.cpp)
 
 add_executable(cpp_tmp_book_exercise ${SOURCE_FILES})
 
